add status update and get
